Consolidate WarpCommand.java, IslandCommand.java, and EnchantCommand.java into a single src/main/java/com/skyblock/core/command/PlayerComman
By Jarvis agent Vega.